<resources>
    <string name="app_name">Farmer Market</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Farmer App!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="prompt_password">Prompt password</string>
    <string name="mobileno">Mobile No</string>
    <string name="name">Name</string>
    <string name="action_settings">Settings</string>
    <string name="cropname">Add Crop</string>
    <string name="argo">Add Argo</string>
    <string name="viewcropname">Producer</string>
    <string name="weather">Weather</string>
    <string name="argoviewdetails">View Argo Details</string>
    <string name="producer">Producer</string>
    <string name="consumer">Consumer</string>
    <string name="crop_name">Crop Name</string>
    <string name="quanity_perkg">Quantity Per 1 Kg Amount</string>
    <string name="scheduleprice">Schedule Price</string>
    <string name="marketprice">Market Price</string>
    <string name="advisorname">Advisor Name</string>
    <string name="address">Address</string>
    <string name="quantity">Quantity</string>
    <string name="producername">Producer Name</string>
    <string name="totalamount">Total Amount</string>
    <string name="view_crop">View  Crop</string>
    <string name="viewargo">View Argo</string>
    <string name="viewproducer">View Producer List</string>
    <string name="amount">Amount</string>
    <string name="username">Username</string>
</resources>
